tests/NormalTests/paczka1/fuzzy1/37410005.err
Error in line 6: n97h97tEoX8 S451 8,0
Error in line 15: njw533BQvA S852 -4,2
Error in line 9: njw533BQvA S852 94,1
Error in line 23: 599 S388 -2,6
Error in line 13: 599 S388 69,6
Error in line 29: MHHl3D S260 59,2
